--- a/trt-core/Cargo.toml
+++ b/trt-core/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Guillaume Depardon <guillaume.depardon@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-rand = "0.7"
+rand = { version = "0.7", features = ["wasm-bindgen"] }
 packed_simd = "0.3"
 image = "0.22"
 num-traits = "0.2"
