--- a/trt-wasm/Cargo.toml
+++ b/trt-wasm/Cargo.toml
@@ -12,3 +12,4 @@ trt-core = { path = "../trt-core" }
 wasm-bindgen = "0.2"
 console_error_panic_hook = { version = "0.1" }
 rand = { version = "0.7", features = ["wasm-bindgen"] }
+trt-dsl = { path = "../trt-dsl" }
