--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -9,14 +9,15 @@
         "jsx": "react",
         "lib": [
             "es2017",
-            "dom"
+            "dom",
+            "webworker"
         ],
         "module": "esNext",
         "noFallthroughCasesInSwitch": true,
         "noImplicitAny": true,
         "noImplicitReturns": true,
-        "noUnusedLocals": true,
-        "noUnusedParameters": true,
+        // "noUnusedLocals": true,
+        // "noUnusedParameters": true,
         "strict": true,
         "strictFunctionTypes": true,
         "strictNullChecks": true,
