Revamped UI. Added react for future refactorings

--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -22,6 +22,7 @@
         "strictFunctionTypes": true,
         "strictNullChecks": true,
         "target": "es6",
-        "moduleResolution": "node"
+        "moduleResolution": "node",
+        "allowSyntheticDefaultImports": true
     },
 }
