--- a/web/package.json
+++ b/web/package.json
@@ -19,7 +19,8 @@
     "@types/react-dom": "^16.9.4",
     "copy-webpack-plugin": "^5.0.0",
     "css-loader": "^3.2.0",
-    "file-loader": "^4.2.0",
+    "file-loader": "^4.3.0",
+    "raw-loader": "^4.0.0",
     "style-loader": "^1.0.0",
     "ts-loader": "^6.2.0",
     "typescript": "^3.6.3",
