--- a/trt-dsl/Cargo.toml
+++ b/trt-dsl/Cargo.toml
@@ -11,3 +11,4 @@ trt-core = { path = "../trt-core" }
 rustpython-vm = { git = "https://github.com/RustPython/RustPython" }
 rustpython-compiler = { git = "https://github.com/RustPython/RustPython" }
 thiserror = "1.0"
+futures = "0.3"
