--- a/trt-dsl/Cargo.toml
+++ b/trt-dsl/Cargo.toml
@@ -11,4 +11,6 @@ trt-core = { path = "../trt-core" }
 rustpython-vm = { git = "https://github.com/RustPython/RustPython" }
 rustpython-compiler = { git = "https://github.com/RustPython/RustPython" }
 thiserror = "1.0"
+reqwest = { path = "/home/globi/dev/reqwest" }
+rand = { version = "0.7", features = ["wasm-bindgen"] }
 futures = "0.3"
