--- a/trt-dsl/Cargo.toml
+++ b/trt-dsl/Cargo.toml
@@ -4,8 +4,6 @@ version = "0.1.0"
 authors = ["Guillaume Depardon <guillaume.depardon@gmail.com>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
 trt-core = { path = "../trt-core" }
 rustpython-vm = { git = "https://github.com/RustPython/RustPython", features = ["freeze-stdlib"] }
@@ -13,3 +11,8 @@ rustpython-compiler = { git = "https://github.com/RustPython/RustPython" }
 thiserror = "1.0"
 reqwest = { path = "/home/globi/dev/reqwest" }
 futures = "0.3"
+
+[dependencies.image]
+version = "0.23"
+default_features = false
+features = ["gif", "jpeg", "png", "webp", "bmp"]
