--- a/trt-render/Cargo.toml
+++ b/trt-render/Cargo.toml
@@ -10,5 +10,5 @@ edition = "2018"
 rayon = "1.3"
 indicatif = { version = "0.14", features = ["with_rayon"] }
 image = "0.23"
-rand = "0.7"
+rand = { version = "0.7", features = ["small_rng"] }
 trt-core = { path = "../trt-core" }
