--- a/trt-wasm/Cargo.toml
+++ b/trt-wasm/Cargo.toml
@@ -12,5 +12,5 @@ trt-core = { path = "../trt-core" }
 wasm-bindgen = "0.2"
 wasm-bindgen-futures = "0.4"
 console_error_panic_hook = { version = "0.1" }
-rand = { version = "0.7", features = ["wasm-bindgen"] }
+rand = { version = "0.7", features = ["wasm-bindgen", "small_rng"] }
 trt-dsl = { path = "../trt-dsl" }
