--- a/web/package.json
+++ b/web/package.json
@@ -9,10 +9,14 @@
   },
   "dependencies": {
     "codemirror": "^5.52.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "trt": "file:../trt-wasm/pkg"
   },
   "devDependencies": {
     "@types/codemirror": "0.0.88",
+    "@types/react": "^16.9.34",
+    "@types/react-dom": "^16.9.7",
     "copy-webpack-plugin": "^5.0.0",
     "css-loader": "^3.2.0",
     "file-loader": "^4.3.0",
