Completely reworked the webworker code using comlink

--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "codemirror": "^5.52.0",
+    "comlink": "^4.3.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "trt": "file:../trt-wasm/pkg"
