--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-draggable": "^4.3.1",
+    "react-split": "^2.0.7",
     "trt": "file:../trt-wasm/pkg"
   },
   "devDependencies": {
