--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
     "codemirror": "^5.52.0",
     "comlink": "^4.3.0",
     "jquery.terminal": "^2.15.4",
+    "prismjs": "^1.20.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-draggable": "^4.3.1",
