Changed the wasm loading strategy Now using the --web option of wasm-bindgen to improve webworker integration

--- a/web/package.json
+++ b/web/package.json
@@ -20,6 +20,7 @@
     "trt": "file:../trt-wasm/pkg"
   },
   "devDependencies": {
+    "@open-wc/webpack-import-meta-loader": "^0.4.6",
     "@types/codemirror": "0.0.88",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.7",
