--- a/trt-wasm/Cargo.toml
+++ b/trt-wasm/Cargo.toml
@@ -14,3 +14,4 @@ wasm-bindgen-futures = "0.4"
 console_error_panic_hook = { version = "0.1" }
 rand = { version = "0.7", features = ["wasm-bindgen", "small_rng"] }
 trt-dsl = { path = "../trt-dsl" }
+js-sys = "0.3"
